// Copyright 2019 Conflux Foundation. All rights reserved.
// Conflux is free software and distributed under GNU General Public License.
// See http://www.gnu.org/licenses/

syntax = "proto3";

package types;

// Protobuf definition for the Rust struct PivotBlockDecision.
message PivotBlockDecision {
  uint64 height = 1;
  bytes block_hash = 2;
  bytes parent_hash = 3;
}